[package]
name = "gyges"
version = "0.0.1"
edition = "2021"
license = "MIT"
#homepage = "https://github.com/OffchainLabs/stylus-hello-world"
#repository = "https://github.com/OffchainLabs/stylus-hello-world"
#keywords = ["arbitrum", "ethereum", "stylus", "alloy"]
#description = "Stylus hello world example"

[dependencies]
alloy-primitives = "=0.8.20"
alloy-sol-types = "=0.8.20"
mini-alloc = "0.8.4"
stylus-sdk = { version = "0.8.4" } #, features = ["debug"] }
hex = "0.4.3"
dotenv = "0.15.0"

[dev-dependencies]
tokio = { version = "1.12.0", features = ["full"] }
ethers = "2.0"
eyre = "0.6.8"
stylus-sdk = { version = "0.8.4", features = ["stylus-test"] }

[features]
export-abi = ["stylus-sdk/export-abi"]
#debug = ["stylus-sdk/debug"]

[[bin]]
name = "gyges"
path = "src/main.rs"

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"

# If you need to reduce the binary size, it is advisable to try other
# optimization levels, such as "s" and "z"
opt-level = "z"

rpath = false            # no run-time search path
debug-assertions = false # prune debug assertions
incremental = false      # no incremental builds
